tests/ui/parser/issues/issue-3036.stderr
error: expected `;`, found `}`
  --> $DIR/issue-3036.rs:6:15
   |
LL |     let _x = 3
   |               ^
LL | }
   | - unexpected token
   |
help: add `;` here
   |
LL |     let _x = 3;
   |               +

error: aborting due to 1 previous error

